# my_vins

./: .env  .gitignore  CMakeLists.txt  README.md  aaa.txt  build.sh  conanfile.py  package.xml
back_end/: CMakeLists.txt  package.xml
back_end/config/: config.yaml
back_end/doc/: ceres_manifold.md  imu_preintegration.md  imu_preintegration_gb.md  vis_residual.md
back_end/launch/: back_end.launch.py
back_end/msg/: FeatureMsg.msg
back_end/src/app/: back_end.cpp  front_end.cpp  sld_opt_test.cpp
back_end/src/ceres_fgo/base/: edge.hpp  fgo_problem.hpp  marginalization_problem.hpp  vertex.hpp
back_end/src/ceres_fgo/imu_factor/: ceres_imu_preitg_factor.hpp
back_end/src/ceres_fgo/imu_factor/imuPreintegration/: imuPreintegration.cpp  imuPreintegration.hpp
back_end/src/ceres_fgo/vis_factor/: vis_meas.cpp  vis_meas.hpp
back_end/src/feature_tracker/: ORBextractor.cpp  ORBextractor.h  feature_tracker.hpp  klt.cpp  klt.hpp  orb.cpp  orb.hpp
back_end/src/my_vins/: estimator.cpp  estimator.hpp  my_vins.cpp  my_vins.hpp  my_vins_feature.hpp  my_vins_param.hpp  my_vins_sfm.cpp  my_vins_sfm.hpp  my_vins_slidewindow.cpp  my_vins_slidewindow.hpp  my_vins_vis.cpp  my_vins_vis.hpp
back_end/src/my_vins/feature/: feature_manager.cpp  feature_manager.hpp
back_end/src/utils/camera_rviz/: camera_rviz.hpp
back_end/src/utils/common/: common_utils.hpp  math_utils.hpp  timer_helper.hpp
back_end/src/utils/input/: input.cpp  input.hpp
back_end/src/utils/slam/: slam_utils.cpp  slam_utils.hpp
conan_cmake/: Boost-Target-debug.cmake  Boost-Target-release.cmake  Boost-debug-x86_64-data.cmake  Boost-release-x86_64-data.cmake  BoostConfig.cmake  CMakePresets.json  Ceres-Target-debug.cmake  Ceres-Target-release.cmake  Ceres-debug-x86_64-data.cmake  Ceres-release-x86_64-data.cmake  CeresConfig.cmake  CeresTargets.cmake  Eigen3-Target-debug.cmake  Eigen3-debug-x86_64-data.cmake  Eigen3Config.cmake  GTSAM-Target-debug.cmake  GTSAM-Target-release.cmake  GTSAM-debug-x86_64-data.cmake  GTSAM-release-x86_64-data.cmake  GTSAMConfig.cmake  GTSAMConfigVersion.cmake  GTSAMTargets.cmake  Sophus-Target-debug.cmake  Sophus-Target-release.cmake  Sophus-debug-x86_64-data.cmake  Sophus-release-x86_64-data.cmake  SophusConfig.cmake  SophusConfigVersion.cmake  SophusTargets.cmake  TBB-Target-debug.cmake  TBB-debug-x86_64-data.cmake  TBB-release-x86_64-data.cmake  TBBConfig.cmake  ZLIB-debug-x86_64-data.cmake  ZLIB-release-x86_64-data.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-debug-x86_64.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  (+32 more)
config/: front_end.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: my_vins.launch.py
log/: latest_build
my_vins_frontend/: package.xml  setup.cfg  setup.py
my_vins_frontend/launch/: front_end.launch.py
my_vins_frontend/my_vins_frontend/: frontend_base.py  spsg.py
my_vins_msg/: CMakeLists.txt  package.xml
my_vins_msg/msg/: FeatureMatchPrevRequest.msg  FeatureMatchPrevResponse.msg  FeatureMatchRequest.msg  FeatureMatchResponse.msg
my_vins_runtime/: CMakeLists.txt  package.xml
my_vins_runtime/config/: rviz.rviz
my_vins_runtime/launch/: my_vins_runtime.launch.py
src/app/: front_end.cpp
src/feature_tracker/: klt.cpp  klt.hpp
src/imuPreintegration/: imuPreintegration.cpp  imuPreintegration.hpp
